Set CSS filter invert() default argument as 0.

As per spec,
the initial value for invert() is 0 so "invert()" must be parsed as "invert(0)"

spec:
https://drafts.fxtf.org/filter-effects/#funcdef-filter-invert
https://www.w3.org/TR/filter-effects-1/#funcdef-invert

Bug: 798683
Change-Id: Ia0086db1d3079d7a8fffd9c88d5e1a19dcbd83de
Reviewed-on: https://chromium-review.googlesource.com/853798
Reviewed-by: nainar <nainar@chromium.org>
Commit-Queue: Shanmuga Pandi <shanmuga.m@samsung.com>
Cr-Commit-Position: refs/heads/master@{#527608}
Former-commit-id: 68455a18e94e8ea744ea9ff248b2d645e853b53d